base.css: 	- Adjusted timing function to prevent overflow errors during animation. 		- Went from quick with back bounce to a simple ease-in-out 		- Only a problem for chrome and firefox probably 		  but provides a better feel for both browsers

--- a/static/base.css
+++ b/static/base.css
@@ -56,8 +56,8 @@ body {
 .t {
     -webkit-transition: all 200ms;
     transition: all 200ms;
-    -webkit-transition-timing-function: cubic-bezier(.8, .75, .39, 1.25);
-    transition-timing-function: cubic-bezier(.8, .75, .39, 1.25);
+    -webkit-transition-timing-function: ease-in-out;
+    transition-timing-function: ease-in-out;
 }
 
 .constrain {
